# 66degrees

./: 66degrees.drawio  CLAUDE.md  config.json  data.db  ingest.py  main.py  pank_main.py  parsers.py  pipeline.py  pyproject.toml  silver.py  tests.py  transform.py
data/report_outputs/: sales_report.csv  window_function.csv
sqls/create/: dim_branch.sql  fact_sales.sql  silver_supermarket.sql
sqls/reports/: sales_report.sql  window_function.sql
sqls/transform/: silver_supermarket.sql
